--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue2-editor": "^2.10.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
